<resources>
    <string name="sdf1" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="hint_date" translatable="false">dd</string>
    <string name="hint_month" translatable="false">MM</string>
    <string name="hint_year" translatable="false">yyyy</string>
    <string name="hint_hour" translatable="false">HH</string>
    <string name="hint_minute" translatable="false">mm</string>
    <string name="hint_second" translatable="false">ss</string>

    <string name="appName">Journal</string>
    <string name="jurnalAlbum">Journal album</string>
    <string name="addJurnal">Add journal</string>
    <string name="editJurnal">Edit journal</string>
    <string name="title">Title</string>
    <string name="pagerIndicator">%1$d of %2$d</string>
    <string name="addAktItem">Add Moment</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="startTime">Start time</string>
    <string name="aktivitasName">Activity name</string>
    <string name="addAktivitas">Add activity</string>
    <string name="coverStyle">Cover style</string>
    <string name="backgroundColor">Background color</string>
    <string name="exm_dateWithoutYear">6 Mar</string>
    <string name="exm_time">10:00</string>
    <string name="exm_title">Title</string>
    <string name="exm_note">Note</string>
    <string name="name">Name</string>
    <string name="started">Started:</string>
    <string name="exm_date">3 March 2021</string>
    <string name="recentMoment">Recent moment:</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="yesDeleteJurnal">Yes, delete journal</string>
    <string name="deleteJnlAktConfirmation">Are you sure you want to delete activity %1$s?</string>
    <string name="deleteJurnalConfirmation">Are you sure you want to delete journal %1$s?</string>
    <string name="exm_lang">en</string>
    <string name="chooseLang">Choose language</string>
    <string name="deleteAktItemConfirmation">Delete %1$s?</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="exm_stopwatch">00:00:00</string>
</resources>